Adaptar a java 21